<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.Notification_setting">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >


            <LinearLayout
                android:id="@+id/linear_privacy_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <RelativeLayout
                    android:id="@+id/chats_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >


                    <ImageView
                        android:id="@+id/back_arow"
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/black"
                        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/back_arow"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Notification Settings"
                        android:textColor="@color/black"
                        android:textFontWeight="500"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:elevation="10dp"
                    android:background="#E0E0E0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chats_setting"/>

            </LinearLayout>






            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_chat_notification"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_privacy_setting">




                <TextView
                    android:id="@+id/text_chat_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chat Notification"
                    android:textSize="16sp"
                    android:textFontWeight="500"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/image_go_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_marginRight="20dp"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_chat_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="25dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_notification"
                        android:textColor="#555555"
                        android:textSize="11sp"
                        android:layout_marginTop="-4dp"
                        android:textFontWeight="400"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view1_notification"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="#E4E4E4"
                app:layout_constraintTop_toBottomOf="@id/constraint_chat_notification"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_msg_preview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1_notification">




                <TextView
                    android:id="@+id/text_msg_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Message preview"
                    android:textSize="16sp"
                    android:textFontWeight="400"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    app:layout_constraintTop_toTopOf="parent"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_msg_preview"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="25dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_preview"
                        android:textColor="#555555"
                        android:textSize="11sp"
                        android:layout_marginTop="-4dp"
                        android:textFontWeight="400"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view2_notification"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="#E4E4E4"
                app:layout_constraintTop_toBottomOf="@id/constraint_msg_preview"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_group_notification"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2_notification">




                <TextView
                    android:id="@+id/text_group_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Group notification"
                    android:textSize="16sp"
                    android:textFontWeight="500"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/image_go_arow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_marginRight="20dp"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_group_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="25dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_notification"
                        android:textColor="#555555"
                        android:textSize="11sp"
                        android:layout_marginTop="-4dp"
                        android:textFontWeight="400"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view3_notification"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="#E4E4E4"
                app:layout_constraintTop_toBottomOf="@id/constraint_group_notification"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_call_notification"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view3_notification">




                <TextView
                    android:id="@+id/text_call_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Call notification"
                    android:textSize="16sp"
                    android:textFontWeight="500"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/image_goo_arow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:layout_marginRight="20dp"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_call_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="25dp">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_notification"
                        android:textColor="#555555"
                        android:textSize="11sp"
                        android:layout_marginTop="-4dp"
                        android:textFontWeight="400"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>